test improvement? (potentially revert if doesnt work)